--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,51 +1,63 @@
-.toolbar{
-    height: 70px;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    background-color: #ccc;
-    padding: 0 25px;
+.toolbar {
+  height: 70px;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  background-color: #ccc;
+  padding: 0 25px;
 
-    h3{
-        margin: 0;
-        font-weight: 500;
-    }
-}
-
-.spacing{
-    flex:1 1 auto;
-}
-
-.sidebar{
-    height: calc(100vh - 70px);
-    width: 100vw;
-}
-
-.sidemenus{
-    height: 100%;
-    border-right: 1px solid #000;
-    padding: 15px;
-}
-
-.center{
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
-    padding: 5px  10px;
-
-    &:hover{
-        background-color: #ccc;
-        cursor: pointer;
-        border-radius: 5px;
-    }
-}
-
-.label{
-    font-size: medium;
+  h3 {
+    margin: 0;
     font-weight: 500;
-    margin: 0 15px 0 10px;
+  }
 }
 
-.submenu{
-    margin-left: 15px;
+.spacing {
+  flex: 1 1 auto;
+}
+
+.sidebar {
+  height: calc(100vh - 70px);
+  width: 100vw;
+  display: flex;
+}
+
+.sidemenus {
+  position: sticky;
+  top: 0;
+
+  height: calc(100vh - 70px);
+  border-right: 1px solid #ccc;
+  padding: 15px;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  padding: 5px 10px;
+
+  &:hover {
+    background-color: #ccc;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+}
+
+.label {
+  font-size: medium;
+  font-weight: 500;
+  margin: 0 15px 0 10px;
+}
+
+.f-1{
+    font-size: 0.9rem;
+}
+
+.submenu {
+  margin-left: 15px;
+}
+
+.submenusmenu {
+  margin-left: 45px;
 }
