--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,330 +1,1 @@
-<!-- <div class="card flex justify-center">
-  <p-drawer [(visible)]="visible" header="Drawer">
-      <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-      </p>
-  </p-drawer>
-  <p-button (click)="visible = true" icon="pi pi-arrow-right" />
-</div> -->
-
-
-
-<!-- <div class="card">
-  <p-drawer header="Left Drawer" [(visible)]="visible1" position="left">
-      <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-      </p>
-  </p-drawer>
-
-  <p-drawer header="Right Drawer" [(visible)]="visible2" position="right">
-      <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-      </p>
-  </p-drawer>
-
-  <p-drawer header="Top Drawer" [(visible)]="visible3" position="top" [style.height]="'auto'">
-      <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-      </p>
-  </p-drawer>
-
-  <p-drawer header="Bottom Drawer" [(visible)]="visible4" position="bottom" [style.height]="'auto'">
-      <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-      </p>
-  </p-drawer>
-  <div class="flex gap-2 justify-center">
-      <p-button type="button" (click)="visible1 = true" icon="pi pi-arrow-right" />
-      <p-button type="button" (click)="visible2 = true" icon="pi pi-arrow-left" />
-      <p-button type="button" (click)="visible3 = true" icon="pi pi-arrow-down" />
-      <p-button type="button" (click)="visible4 = true" icon="pi pi-arrow-up" />
-  </div>
-</div> -->
-
-
-
-<!-- <div class="card flex justify-center">
-  <p-drawer header="Drawer" [(visible)]="visible" styleClass="!w-full md:!w-80 lg:!w-[30rem]">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.
-        </p>
-    </p-drawer>
-    <p-button (click)="visible = true" icon="pi pi-arrow-right" />
-</div> -->
-
-
-
-<!-- <div class="card flex justify-center">
-  <p-drawer [(visible)]="visible">
-      <ng-template #header>
-          <div class="flex items-center gap-2">
-              <p-avatar
-                  image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
-                  shape="circle"
-              />
-              <span class="font-bold">Amy Elsner</span>
-          </div>
-      </ng-template>
-      <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-      </p>
-      <ng-template #footer>
-          <div class="flex items-center gap-2">
-              <button pButton label="Account" icon="pi pi-user" class="w-full" outlined></button>
-              <button
-                  pButton
-                  label="Logout"
-                  icon="pi pi-sign-out"
-                  class="w-full"
-                  severity="danger"
-                  text
-              ></button>
-          </div>
-      </ng-template>
-  </p-drawer>
-  <button pButton (click)="visible = true" icon="pi pi-plus"></button>
-</div> -->
-
-
-
-
-<!-- <div class="card flex justify-center">
-  <p-drawer #drawerRef [(visible)]="visible">
-      <ng-template #headless>
-          <div class="flex flex-col h-full">
-              <div class="flex items-center justify-between px-6 pt-4 shrink-0">
-                  <span>
-                      <p-button type="button" (click)="closeCallback($event)" icon="pi pi-times" rounded="true" outlined="true" styleClass="h-8 w-8"></p-button>
-                  </span>
-              </div>
-
-              <div class="overflow-y-auto">
-                  <ul class="list-none p-4 m-0">
-                      <li>
-                          <div
-                              pRipple
-                              pStyleClass="@next"
-                              enterFromClass="hidden"
-                              enterActiveClass="animate-slidedown"
-                              leaveToClass="hidden"
-                              leaveActiveClass="animate-slideup"
-                              class="p-4 flex items-center justify-between text-surface-600 dark:text-surface-200 cursor-pointer p-ripple"
-                          >
-                              <span class="font-medium">FAVORITES</span>
-                              <i class="pi pi-chevron-down"></i>
-                          </div>
-                          <ul class="list-none p-0 m-0 overflow-hidden">
-                              <li>
-                                  <a pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                                      <i class="pi pi-home mr-2"></i>
-                                      <span class="font-medium">Dashboard</span>
-                                  </a>
-                              </li>
-                              <li>
-                                  <a pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                                      <i class="pi pi-bookmark mr-2"></i>
-                                      <span class="font-medium">Bookmarks</span>
-                                  </a>
-                              </li>
-                              <li>
-                                  <a
-                                      pRipple
-                                      pStyleClass="@next"
-                                      enterFromClass="hidden"
-                                      enterActiveClass="animate-slidedown"
-                                      leaveToClass="hidden"
-                                      leaveActiveClass="animate-slideup"
-                                      class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple"
-                                  >
-                                      <i class="pi pi-chart-line mr-2"></i>
-                                      <span class="font-medium">Reports</span>
-                                      <i class="pi pi-chevron-down ml-auto"></i>
-                                  </a>
-                                  <ul class="list-none py-0 pl-4 pr-0 m-0 hidden overflow-y-hidden transition-all duration-[400ms] ease-in-out">
-                                      <li>
-                                          <a
-                                              pRipple
-                                              pStyleClass="@next"
-                                              enterFromClass="hidden"
-                                              enterActiveClass="animate-slidedown"
-                                              leaveToClass="hidden"
-                                              leaveActiveClass="animate-slideup"
-                                              class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple"
-                                          >
-                                              <i class="pi pi-chart-line mr-2"></i>
-                                              <span class="font-medium">Revenue</span>
-                                              <i class="pi pi-chevron-down ml-auto"></i>
-                                          </a>
-                                          <ul class="list-none py-0 pl-4 pr-0 m-0 hidden overflow-y-hidden transition-all duration-[400ms] ease-in-out">
-                                              <li>
-                                                  <a pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                                                      <i class="pi pi-table mr-2"></i>
-                                                      <span class="font-medium">View</span>
-                                                  </a>
-                                              </li>
-                                              <li>
-                                                  <a pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                                                      <i class="pi pi-search mr-2"></i>
-                                                      <span class="font-medium">Search</span>
-                                                  </a>
-                                              </li>
-                                          </ul>
-                                      </li>
-                                      <li>
-                                          <a pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                                              <i class="pi pi-chart-line mr-2"></i>
-                                              <span class="font-medium">Expenses</span>
-                                          </a>
-                                      </li>
-                                  </ul>
-                              </li>
-                              <li>
-                                  <a pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                                      <i class="pi pi-users mr-2"></i>
-                                      <span class="font-medium">Team</span>
-                                  </a>
-                              </li>
-                              <li>
-                                  <a pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                                      <i class="pi pi-comments mr-2"></i>
-                                      <span class="font-medium">Messages</span>
-                                      <span class="inline-flex items-center justify-center ml-auto bg-primary text-primary-contrast rounded-full" style="min-width: 1.5rem; height: 1.5rem">3</span>
-                                  </a>
-                              </li>
-                              <li>
-                                  <a pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                                      <i class="pi pi-calendar mr-2"></i>
-                                      <span class="font-medium">Calendar</span>
-                                  </a>
-                              </li>
-                              <li>
-                                  <a pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                                      <i class="pi pi-cog mr-2"></i>
-                                      <span class="font-medium">Settings</span>
-                                  </a>
-                              </li>
-                          </ul>
-                      </li>
-                  </ul>
-                  <ul class="list-none p-4 m-0">
-                      <li>
-                          <div
-                              pRipple
-                              pStyleClass="@next"
-                              enterFromClass="hidden"
-                              enterActiveClass="animate-slidedown"
-                              leaveToClass="hidden"
-                              leaveActiveClass="animate-slideup"
-                              class="p-4 flex items-center justify-between text-surface-600 dark:text-surface-200 cursor-pointer p-ripple"
-                          >
-                              <span class="font-medium">APPLICATION</span>
-                              <i class="pi pi-chevron-down"></i>
-                          </div>
-                          <ul class="list-none p-0 m-0 overflow-hidden">
-                              <li>
-                                  <a pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                                      <i class="pi pi-folder mr-2"></i>
-                                      <span class="font-medium">Projects</span>
-                                  </a>
-                              </li>
-                              <li>
-                                  <a pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                                      <i class="pi pi-chart-bar mr-2"></i>
-                                      <span class="font-medium">Performance</span>
-                                  </a>
-                              </li>
-                              <li>
-                                  <a pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                                      <i class="pi pi-cog mr-2"></i>
-                                      <span class="font-medium">Settings</span>
-                                  </a>
-                              </li>
-                          </ul>
-                      </li>
-                  </ul>
-              </div>
-              <div class="mt-auto">
-                  <hr class="mb-4 mx-4 border-t border-0 border-surface" />
-                  <a pRipple class="m-4 flex items-center cursor-pointer p-4 gap-2 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
-                      <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" shape="circle" />
-                      <span class="font-bold">Amy Elsner</span>
-                  </a>
-              </div>
-          </div>
-      </ng-template>
-  </p-drawer>
-  <p-button (click)="visible = true" icon="pi pi-bars" />
-  </div> -->
-
-
-
-<div class="toolbar">
-    <button mat-icon-button (click)="sideMenuOpened.set(!sideMenuOpened())"><mat-icon>menu</mat-icon></button>
-    <div class="spacing"></div>
-    <div class="user">
-        <h3>Livingston</h3>
-    </div>
-</div>
-<div class="sidebar">
-    <div class="sidemenus" [style.width.px]="sideMenusWidth()">
-        <br>
-        @for (item of items; track $index) {
-
-        <!-- if side menu closed, show only icons with center position -->
-        <div class="center" [style.justify-content]="!sideMenuOpened() ? 'center' : ''">
-            <mat-icon>{{item.icon}}</mat-icon>
-            <!-- show item label, arrow only if sidemenu opened -->
-            @if(sideMenuOpened()){
-            <span class="label">{{item.label}}</span>
-            }
-            <!-- show arrow only if item.subItems.length > 0 and sidemenu opened -->
-            @if(sideMenuOpened() && item.subItems?.length){
-            <mat-icon (click)="item.showSubItem.set(!item.showSubItem())">{{item.showSubItem() ?
-                'keyboard_arrow_up':'keyboard_arrow_down'}}</mat-icon>
-            }
-        </div>
-
-        <!-- sidemenu opened and item.arrow clicked show subItems -->
-        @if(sideMenuOpened() && item.showSubItem()){
-        @for (subItem of item.subItems; track $index) {
-            <div>
-                <ul class="center submenu">
-                    <mat-icon>{{subItem.icon}}</mat-icon>
-                    <span class="label f-1">{{subItem.label}}</span>
-                    @if(subItem.subItemsItems?.length){
-                    <mat-icon
-                        (click)="subItem.showSubItemsItem.set(!subItem.showSubItemsItem())">{{subItem.showSubItemsItem()
-                        ?'keyboard_arrow_up' :'keyboard_arrow_down'}}</mat-icon>
-                    }
-                </ul>
-            </div>
-            @if(subItem.subItemsItems?.length && subItem.showSubItemsItem()){
-                @for (subItemsItem of subItem.subItemsItems; track $index) {
-                <div>
-                    <ul class="center submenusmenu">
-                        <mat-icon>{{subItemsItem.icon}}</mat-icon>
-                        <span class="label f-1">{{subItemsItem.label}}</span>
-                    </ul>
-                </div>
-                }
-            }
-        }
-        }
-        }
-    </div>
-    <div class="body">
-    </div>
-</div>
+<app-layout></app-layout>
