--- a/src/components/layout/layout.component.html
+++ b/src/components/layout/layout.component.html
@@ -8,10 +8,10 @@
     </div>
     <div class="body">
         <div class="sidebar" [style.width.px]="sideMenusWidth()">
-            <div class="sidemenus" >
+            <div class="sidemenus">
                 <br>
                 @for (item of items; track $index) {
-        
+
                 <!-- if side menu closed, show only icons with center position -->
                 <div class="center" [style.justify-content]="!sideMenuOpened() ? 'center' : ''">
                     <mat-icon>{{item.icon}}</mat-icon>
@@ -25,38 +25,39 @@
                         'keyboard_arrow_up':'keyboard_arrow_down'}}</mat-icon>
                     }
                 </div>
-         
+
                 <!-- sidemenu opened and item.arrow clicked show subItems -->
                 @if(sideMenuOpened() && item.showSubItem()){
                 @for (subItem of item.subItems; track $index) {
-                    <div>
-                        <ul class="center submenu">
-                            <mat-icon>{{subItem.icon}}</mat-icon>
-                            <span class="label f-1">{{subItem.label}}</span>
-                            @if(subItem.subItemsItems?.length){
-                            <mat-icon
-                                (click)="subItem.showSubItemsItem.set(!subItem.showSubItemsItem())">{{subItem.showSubItemsItem()
-                                ?'keyboard_arrow_up' :'keyboard_arrow_down'}}</mat-icon>
-                            }
-                        </ul>
-                    </div>
-                    @if(subItem.subItemsItems?.length && subItem.showSubItemsItem()){
-                        @for (subItemsItem of subItem.subItemsItems; track $index) {
-                        <div>
-                            <ul class="center submenusmenu">
-                                <mat-icon>{{subItemsItem.icon}}</mat-icon>
-                                <span class="label f-1">{{subItemsItem.label}}</span>
-                            </ul>
-                        </div>
+                <div>
+                    <ul class="center submenu">
+                        <mat-icon>{{subItem.icon}}</mat-icon>
+                        <span class="label f-1">{{subItem.label}}</span>
+                        @if(subItem.subItemsItems?.length){
+                        <mat-icon
+                            (click)="subItem.showSubItemsItem.set(!subItem.showSubItemsItem())">{{subItem.showSubItemsItem()
+                            ?'keyboard_arrow_up' :'keyboard_arrow_down'}}</mat-icon>
                         }
-                    }
+                    </ul>
+                </div>
+                @if(subItem.subItemsItems?.length && subItem.showSubItemsItem()){
+                @for (subItemsItem of subItem.subItemsItems; track $index) {
+                <div>
+                    <ul class="center submenusmenu">
+                        <mat-icon>{{subItemsItem.icon}}</mat-icon>
+                        <span class="label f-1"
+                            (click)="navigate([item.route, subItem.route, subItemsItem.route])">{{subItemsItem.label}}</span>
+                    </ul>
+                </div>
+                }
+                }
                 }
                 }
                 }
             </div>
         </div>
         <div class="content">
-            lorem*500
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
