--- a/src/pages/master/aos-user/item-master/list-item-master/list-item-master.component.html
+++ b/src/pages/master/aos-user/item-master/list-item-master/list-item-master.component.html
@@ -1,1 +1,38 @@
-<p>list-item-master works!</p>
+<div class="container">
+    <div class="header"></div>
+    <div class="body">
+        <div class="data">
+            <table>
+                <thead>
+                    <tr>
+                        <th>S.No.</th>
+                        <th>Item Name</th>
+                        <th>Item Code</th>
+                        <th>Category</th>
+                        <th>Item Image</th>
+                        <th>Date Added</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @for (item of items; track $index) {
+                    <tr>
+                        <td>{{ $index + 1 }}.</td>
+                        <td>{{ item.name }}</td>
+                        <td>{{ item.code }}</td>
+                        <td>{{ item.category.name }}</td>
+                        <td>{{ item.name }}</td>
+                        <td>{{ item.saveDt }}</td>
+                        <td>
+                            <button mat-icon-button><mat-icon>visibility</mat-icon></button>
+                        </td>
+                    </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+        <div class="paginator">
+            <app-paginator (page)="navigate($event)" [size]="size"></app-paginator>
+        </div>
+    </div>
+</div>
