--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+@use "@angular/material" as mat;
 @import "primeicons/primeicons.css";
+
+@font-face {
+  font-family: ROBOTO-THIN;
+  src: url("assets/fonts/roboto/Roboto-Thin.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: ROBOTO-LIGHT;
+  src: url("assets/fonts/roboto/Roboto-Light.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: ROBOTO-MEDIUM;
+  src: url("assets/fonts/roboto/Roboto-Medium.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: ROBOTO-BOLD;
+  src: url("assets/fonts/roboto/Roboto-Bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: ROBOTO-REGULAR;
+  src: url("assets/fonts/roboto/Roboto-Regular.ttf") format("truetype");
+}
+
 html,
 body {
   height: 100%;
@@ -7,5 +34,5 @@ body {
 }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: POPPINS;
 }
