--- a/src/components/paginator/paginator.component.html
+++ b/src/components/paginator/paginator.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="title">Showing {{from + 1}} to {{to}} of {{records}} entries</div>
+    <div class="title">Showing {{offset + 1}} to {{to}} of {{records}} entries</div>
     <div class="flex">
         <button class="title" (click)="previous(true,currentPage!.index-1)">
             << Previous</button>
