--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -1,3 +1,5 @@
 $bodyBackgroundColor : #EFF1F3;
 $tableHeaderColor : #fff;
 $tableHeaderBackgroundColor : #555;
+$carat: "data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDEyIDgiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZmlsbD0iIzMzMyIgZD0iTTAgMGw2IDYgNi02eiIvPjwvc3ZnPg==";
+$btnSmallColor: #054272;
