--- a/src/pages/master/aos-user/item-master/list-item-master/list-item-master.component.html
+++ b/src/pages/master/aos-user/item-master/list-item-master/list-item-master.component.html
@@ -6,12 +6,11 @@
                 <option [value]="row">{{row}}</option>
                 }
             </select>
+            &nbsp;&nbsp;&nbsp;
+            <button class="btn-sm" >show</button>
         </div>
         <div class="center">
-            <button class="add" mat-fab extended>
-                <mat-icon>add</mat-icon>
-                Add
-              </button>
+            <button class="btn-sm" >Add Item</button>
             <input class="search" type="text" placeholder="Enter search term ...">
             <button class="btn-sm" >search</button>
         </div>
