--- a/src/pages/master/aos-user/item-category-master/list-item-category-master/list-item-category-master.component.html
+++ b/src/pages/master/aos-user/item-category-master/list-item-category-master/list-item-category-master.component.html
@@ -1,1 +1,54 @@
-<p>list-item-category-master works!</p>
+<div class="container">
+    <header>
+        <div class="center">
+            <select>
+                @for (row of rows; track row) {
+                <option [value]="row">{{row}}</option>
+                }
+            </select>
+            &nbsp;&nbsp;&nbsp;
+            <button class="btn-sm">show</button>
+        </div>
+        <div class="center">
+            <button class="btn-sm" (click)="openDialog('0ms', '0ms')">Add Item Category</button>
+            <input class="search" type="text" placeholder="Enter search term ...">
+            <button class="btn-sm">search</button>
+        </div>
+    </header>
+    <br>
+    <div class="body">
+        <div class="data">
+            <table>
+                <thead>
+                    <tr>
+                        <th>S.No.</th>
+                        <th>Item Name</th>
+                        <th>Item Code</th>
+                        <th>Category</th>
+                        <th>Item Image</th>
+                        <th>Date Added</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @for (item of items; track $index) {
+                    <tr>
+                        <td>{{ $index + 1 }}.</td>
+                        <td>{{ item.name }}</td>
+                        <td>{{ item.code }}</td>
+                        <td>{{ item.category.name }}</td>
+                        <td>{{ item.name }}</td>
+                        <td>{{ item.saveDt }}</td>
+                        <td>
+                            <button mat-icon-button><mat-icon>visibility</mat-icon></button>
+                        </td>
+                    </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+        <div class="paginator">
+            <app-paginator (page)="navigate($event)" [size]="size"></app-paginator>
+        </div>
+    </div>
+</div>
