--- a/src/pages/master/aos-user/item-category-master/create-item-category-master/create-item-category-master.component.html
+++ b/src/pages/master/aos-user/item-category-master/create-item-category-master/create-item-category-master.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Add New Item Category</h2>
+<h2 mat-dialog-title>Add New Category</h2>
 <mat-dialog-content>
     <form [formGroup]="form">
         <br>
