--- a/src/pages/master/aos-user/item-category-master/list-item-category-master/list-item-category-master.component.html
+++ b/src/pages/master/aos-user/item-category-master/list-item-category-master/list-item-category-master.component.html
@@ -52,6 +52,7 @@
       </table>
     </div>
     <div class="paginator">
+      @if(items.length){
       <app-paginator
         (page)="navigate($event)"
         [size]="size"
@@ -59,6 +60,9 @@
         [from]="offset * limit + 1"
         [to]="offset * 2 * limit"
       ></app-paginator>
+      } @else {
+      <h2>No Data in the table...</h2>
+      }
     </div>
   </div>
 </div>
