--- a/src/pages/master/aos-user/item-master/list-item-master/list-item-master.component.html
+++ b/src/pages/master/aos-user/item-master/list-item-master/list-item-master.component.html
@@ -1,54 +1,72 @@
 <div class="container">
-    <header>
-        <div class="center">
-            <select>
-                @for (row of rows; track row) {
-                <option [value]="row">{{row}}</option>
-                }
-            </select>
-            &nbsp;&nbsp;&nbsp;
-            <button class="btn-sm" >show</button>
-        </div>
-        <div class="center">
-            <button class="btn-sm" >Add Item</button>
-            <input class="search" type="text" placeholder="Enter search term ...">
-            <button class="btn-sm" >search</button>
-        </div>
-    </header>
-    <br>
-    <div class="body">
-        <div class="data">
-            <table>
-                <thead>
-                    <tr>
-                        <th>S.No.</th>
-                        <th>Item Name</th>
-                        <th>Item Code</th>
-                        <th>Category</th>
-                        <th>Item Image</th>
-                        <th>Date Added</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @for (item of items; track $index) {
-                    <tr>
-                        <td>{{ $index + 1 }}.</td>
-                        <td>{{ item.name }}</td>
-                        <td>{{ item.code }}</td>
-                        <td>{{ item.category.name }}</td>
-                        <td>{{ item.name }}</td>
-                        <td>{{ item.saveDt }}</td>
-                        <td>
-                            <button mat-icon-button><mat-icon>visibility</mat-icon></button>
-                        </td>
-                    </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-        <div class="paginator">
-            <app-paginator (page)="navigate($event)" [size]="size"></app-paginator>
-        </div>
+  <header>
+    <div class="center">
+      <select (change)="onSelectRow($event)">
+        @for (row of rows; track row) {
+        <option [value]="row">{{ row }}</option>
+        }
+      </select>
+      &nbsp;&nbsp;&nbsp;
+      <button class="btn-sm" (click)="loadData()">show</button>
     </div>
+    <div class="center">
+      <button class="btn-sm" (click)="navigateToCreateNewItemPage()">
+        Add Item
+      </button>
+      <input class="search" type="text" placeholder="Enter search term ..." />
+      <button class="btn-sm">search</button>
+    </div>
+  </header>
+  <br />
+  <div class="body">
+    <div class="data">
+      <table>
+        <thead>
+          <tr>
+            <th>S.No.</th>
+            <th>Item Name</th>
+            <th>Item Code</th>
+            <th>Category</th>
+            <th>Item Image</th>
+            <th>Date Added</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          @for (item of items; track $index) {
+          <tr>
+            <td>{{ $index + 1 + offset * limit }}.</td>
+            <td>{{ item.name }}</td>
+            <td>{{ item.code }}</td>
+            <td>{{ item.category.name }}</td>
+            <td>{{ item.name }}</td>
+            <td>{{ item.saveDt }}</td>
+            <td>
+              <button mat-icon-button (click)="editItem(item.id)">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button (click)="deleteItem(item.id)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
+          </tr>
+          }
+        </tbody>
+      </table>
+    </div>
+    <div class="paginator">
+      @if(items.length){
+      <app-paginator
+        (page)="navigate($event)"
+        [size]="size"
+        [records]="records"
+        [from]="offset * limit + 1"
+        [to]="offset * 2 * limit"
+      ></app-paginator>
+    }
+    @else {
+      <h2>No Data in the table...</h2>
+    }
+    </div>
+  </div>
 </div>
