--- a/src/pages/master/aos-user/item-master/list-item-master/list-item-master.component.scss
+++ b/src/pages/master/aos-user/item-master/list-item-master/list-item-master.component.scss
@@ -1,9 +1,9 @@
 @use "../../../../../constants/colors.scss" as color;
 
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 table {
@@ -50,26 +50,30 @@ select {
   }
 }
 
-.search{
-    border: 1px solid color.$borderColor;
-    padding: 10px;
-    border-radius: 5px;
-    margin: 0 15px;
+.search {
+  border: 1px solid color.$borderColor;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 0 15px;
 }
 
-.center{
-    display: flex;
-    align-items: center;
+.center {
+  display: flex;
+  align-items: center;
 }
 
-.btn-sm{
-    background-color: color.$btnSmallColor;
-    color: #fff;
-    padding: 3px 7px;
-    cursor: pointer;
-    font-weight: 600;
+.btn-sm {
+  background-color: color.$btnSmallColor;
+  color: #fff;
+  padding: 3px 7px;
+  cursor: pointer;
+  font-weight: 600;
 }
 
-.add{
-    font-weight: 500;
+.add {
+  font-weight: 500;
+}
+
+.paginator>h2{
+  text-align: center;
 }
