--- a/src/pages/master/aos-user/item-master/create-item-master/create-item-master.component.html
+++ b/src/pages/master/aos-user/item-master/create-item-master/create-item-master.component.html
@@ -28,7 +28,10 @@
           (change)="onFileSelected($event)"
         />
         @if(selectedFile){
-        <p>{{ selectedFile.name }} <span class="remove" (click)="removeFile()">x</span></p>
+        <p>
+          {{ selectedFile.name }}
+          <span class="remove" (click)="removeFile()">x</span>
+        </p>
         }
         <button mat-button type="button" (click)="fileInput.click()">
           Select File
@@ -80,7 +83,7 @@
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Minimum Order Quantity</mat-label>
-        <input matInput formControlName="minimumOrderQty" />
+        <input matInput formControlName="minOrderQty" />
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Item Brand</mat-label>
@@ -89,7 +92,9 @@
     </div>
     <div class="form-row">
       <button mat-flat-button type="submit">Submit</button>
-      <button mat-button type="button">Cancel</button>
+      <button mat-button type="button" (click)="navigateToListItemPage()">
+        Cancel
+      </button>
     </div>
   </form>
 </div>
